# ls-spa

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: coverage.yml  poetry-cd.yml  poetry-ci.yml  pre-commit.yml
ls_spa/: ls_spa.py
notebooks/: shapley_toy.py
tests/: test_ls_spa.py
